# MythCode

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSIONING.md  app.py  config.yaml  docker-compose.yml  merge_sort.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.pcitccode/: conversation.json
agent/: __init__.py  agent_team.py  auto_memory.py  claude_md.py  config_reloader.py  context.py  cost_tracker.py  file_watcher.py  hooks.py  loop.py  memory.py  output_style.py  permissions.py  persistence.py  plan_manager.py  rules.py  session_fork.py  session_index.py  session_map.py  skills.py  snapshot.py  subagent.py  subagent_prompts.py  todo.py
commands/: __init__.py  add_dir.py  base.py  branch_cmd.py  bug.py  clear.py  commit.py  compact.py  config_cmd.py  cost.py  custom.py  doctor.py  exit.py  fork_cmd.py  help.py  ide.py  init.py  loader.py  memory_cmd.py  merge_cmd.py  model.py  permissions_cmd.py  plan_cmd.py  registry.py  review.py  rewind.py  sessions_cmd.py  skill_cmd.py  status.py  style_cmd.py  switch_cmd.py  tools_cmd.py  upgrade.py
config/: __init__.py  _config.py  config.yaml  settings.py
dashboard/: __init__.py  app.py  auth.py  schemas.py  server.py
dashboard/static/: index.html
deploy/systemd/: mythcoder.service
ide/: __init__.py  bridge.py  handler.py  protocol.py
llm/: __init__.py  client.py  token_counter.py
mcp/: __init__.py  client.py  manager.py  wrapper.py
tests/: test_context.py  test_core.py  test_cost_tracker.py  test_dashboard.py  test_diff_utils.py  test_glob_ops.py  test_llm_client.py  test_logging.py  test_registry.py  test_security.py  test_todo.py
tools/: base.py  command_ops.py  directory_ops.py  file_ops.py  glob_ops.py  init_tools.py  notebook_ops.py  registry.py  sandbox.py  search_ops.py  skill_ops.py  task_ops.py  team_ops.py  todo_ops.py  web_ops.py
ui/: __init__.py  console.py  display.py  prompt.py
utils/: agentignore.py  audit.py  debug.py  diff_utils.py  git_utils.py  glob_utils.py  html_utils.py  logger.py  path_utils.py
